Fixed spacing issues with ratings and h1.

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -27,6 +27,7 @@ h1 {
   font-size: 3rem;
   font-weight: 700;
   color: var(--color-primary);
+  line-height: 3rem;
 }
 
 h2 {
