--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -20,8 +20,9 @@
   .intro h1 {
     text-align: left;
     font-size: 4.5rem;
-    padding: 0 0 2.4rem 0;
+    padding: 0 0 1rem 0;
     width: 42.5rem;
+    line-height: 4.5rem;
   }
 
   .intro p {
