--- a/app/scss/_rating.scss
+++ b/app/scss/_rating.scss
@@ -2,10 +2,10 @@
   text-align: center;
   background: var(--color-neutral-2);
   border-radius: 0.8rem;
-  margin: 0.8rem 0 0.8rem 0;
+  margin: 1.4rem 0 1.4rem 0;
   max-width: 32.6rem;
   width: 100%;
-  padding: 1.2rem 1.4rem 1.4rem 1.4rem;
+  padding: 1.6rem 1.4rem 1.6rem 1.4rem;
 }
 
 .rating p {
